2009-04-05  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygtype.c (pyg_value_from_pyobject): Bug 577999 –
	converting a negative long Python value to a GUINT64 GValue
	doesn't error out as it should.

2009-04-04  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override:
	(_wrap_g_file_set_attributes_async)
	(_wrap_g_file_set_attributes_finish) Wrap new GFile methods.
	
	* tests/test_gio.py: Test the above methods.

2009-03-31  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override:
	(_wrap_g_file_query_filesystem_info_async) Fix a typo.

2009-03-31  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override:
	(_wrap_g_file_query_filesystem_info_async) Wrap new GFile method.

2009-03-31  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gio.defs: Add missing g_file_query_filesystem_info_async and
	g_file_query_filesystem_info_finish

2009-03-30  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override: (_wrap_g_file_mount_mountable)
	Swap kwargs names to reflect the code.

2009-03-30  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override: (_wrap_g_file_mount_enclosing_volume)
	Swap kwargs names to reflect the code.

2009-03-30  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override:
	(_wrap_g_file_find_enclosing_mount_async) Wrap new GFile method.

2009-03-30  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override:
	(_wrap_g_file_eject_mountable) Wrap new GFile method.

2009-03-30  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override: (_wrap_g_file_copy) revert previous commit.

2009-03-30  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override: (_wrap_g_file_copy) callback cannot be optional.

2009-03-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gvolume.override: (_wrap_g_volume_mount) should accept None
	for mount_operation.

2009-03-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gvolume.override: Swap kwargs names to reflect the code.
